--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
                   >♥ Follow</a
                 ><a
                   class="bg-zinc-300 py-1 px-4 rounded-sm text-zinc-600"
-                  href="https://pump.fun/coin/2JDP7KH7ipkJN7KpgBxzD6v726DnFu7q7Pw9DGGGXrfX"
-                  >BUY $ASU (CA) :)</a
+                  href="https://fun.virtuals.io"
+                  >BUY $YUMI :)</a
                 ><a
                   class="bg-zinc-300 py-1 px-4 rounded-sm text-zinc-600"
                   href="https://t.me/yumivirtuals"
@@ -436,8 +436,8 @@
                 >♥ Follow</a
               ><a
                 class="bg-zinc-300 py-1 px-4 rounded-sm text-zinc-600"
-                href="https://pump.fun/coin/2JDP7KH7ipkJN7KpgBxzD6v726DnFu7q7Pw9DGGGXrfX"
-                >BUY $ASU (CA) :)</a
+                href="https://fun.virtuals.io"
+                >BUY $YUMI :)</a
               ><a
                 class="bg-zinc-300 py-1 px-4 rounded-sm text-zinc-600"
                 href="https://t.me/yumivirtuals"
